# fgwsz-package_simd

./: CMakeLists.txt  README-zh.md  README.md  benchmarks.md  cmakego.ps1  cmakego.sh  git_init.ps1  git_push.ps1  git_push.sh
include/: cli.hpp  console.hpp  constants.hpp  entry_header.hpp  io.hpp  io_create.hpp  io_file_writer.hpp  io_ireader.hpp  io_iwriter.hpp  io_mmap_reader.hpp  io_mmap_writer.hpp  io_stream_reader.hpp  io_stream_writer.hpp  lister.hpp  package_error.hpp  packer.hpp  path_utils.hpp  simd.hpp  summary.hpp  unpacker.hpp  utils.hpp
src/: cli.cpp  console.cpp  constants.hpp  entry_header.cpp  entry_header.hpp  io_create.cpp  io_file_writer.cpp  io_iwriter.hpp  io_mmap_reader.cpp  io_mmap_writer.cpp  io_mmap_writer.hpp  io_stream_reader.cpp  io_stream_reader.hpp  io_stream_writer.cpp  io_stream_writer.hpp  lister.cpp  lister.hpp  main.cpp  package_error.cpp  package_error.hpp  packer.cpp  packer.hpp  path_utils.cpp  path_utils.hpp  simd.cpp  simd.hpp  summary.cpp  unpacker.cpp  unpacker.hpp  utils.cpp  utils.hpp
