cmake_minimum_required(VERSION 3.15)
get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${PROJECT_NAME} LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
include_directories(include)
aux_source_directory(src SOURCE_DIR)
add_executable(${PROJECT_NAME} ${SOURCE_DIR})
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE "/utf-8")
endif()
